fix width overflow on mobile

--- a/src/css/main-body.css
+++ b/src/css/main-body.css
@@ -18,6 +18,7 @@ main > .today > * {
   height: 100%;
   display: flex;
   align-items: center;
+  flex: 2;
 }
 
 .weather-gif-wrapper > img {
@@ -32,7 +33,8 @@ main .condition-detailed-wrapper {
 
   /* background-color: #e6c800; */
   display: flex;
-  justify-content: space-around;
+
+  /* justify-content: space-around; */
   align-items: center;
 }
 
@@ -40,6 +42,7 @@ main .condition-detailed {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  flex: 1;
 }
 
 main .temperature {
