--- a/src/css/media.css
+++ b/src/css/media.css
@@ -7,37 +7,42 @@
   .condition-detailed-wrapper > .weather-gif-wrapper {
     justify-content: center;
   }
-}
 
-@media screen and (width <= 850px) {
-  header form {
-    gap: 10px;
-  }
-}
-
-@media screen and (width <= 1100px) {
-  .today > * {
-    padding: 40px 0;
+  @media screen and (width <= 850px) {
+    header form {
+      gap: 10px;
+    }
   }
 
-  main > .today {
-    flex-direction: column;
-  }
+  @media screen and (width <= 1100px) {
+    .today > * {
+      padding: 40px 0;
+    }
 
-  .hours-detailed {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center !important;
-  }
+    main > .today {
+      flex-direction: column;
+    }
 
-  .hours-detailed > .table-wrapper {
-    position: static !important;
-    transform: none !important;
-    flex-direction: column;
-  }
+    .hours-detailed {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center !important;
+    }
 
-  .table-wrapper td {
-    padding: 5px 30px !important;
+    .hours-detailed > .table-wrapper {
+      position: static !important;
+      transform: none !important;
+      flex-direction: column;
+      width: 100% !important;
+    }
+
+    .table-wrapper > table {
+      width: 100%;
+    }
+
+    .table-wrapper td {
+      padding: 5px 20px !important;
+    }
   }
 }
